# Spotctl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  launch.sh
doxygen/: spotifyclient
doxygen/html/: _album_8cpp.html  _album_8cpp__incl.map  _album_8cpp__incl.md5  _album_8cpp_source.html  _album_8h.html  _album_8h__dep__incl.map  _album_8h__dep__incl.md5  _album_8h__incl.map  _album_8h__incl.md5  _album_8h_source.html  _artist_8cpp.html  _artist_8cpp__incl.map  _artist_8cpp__incl.md5  _artist_8cpp_source.html  _artist_8h.html  _artist_8h__dep__incl.map  _artist_8h__dep__incl.md5  _artist_8h__incl.map  _artist_8h__incl.md5  _artist_8h_source.html  _constants_8h.html  _constants_8h__dep__incl.map  _constants_8h__dep__incl.md5  _constants_8h_source.html  _context_8cpp.html  _context_8cpp__incl.map  _context_8cpp__incl.md5  _context_8cpp_source.html  _context_8h.html  _context_8h__dep__incl.map  _context_8h__dep__incl.md5  _context_8h__incl.map  _context_8h__incl.md5  _context_8h_source.html  _copyright_8cpp.html  _copyright_8cpp__incl.map  _copyright_8cpp__incl.md5  _copyright_8cpp_source.html  _copyright_8h.html  _copyright_8h__dep__incl.map  (+619 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  (+36 more)
doxygen/latex/: _album_8cpp.tex  _album_8cpp__incl.md5  _album_8h.tex  _album_8h__dep__incl.md5  _album_8h__incl.md5  _artist_8cpp.tex  _artist_8cpp__incl.md5  _artist_8h.tex  _artist_8h__dep__incl.md5  _artist_8h__incl.md5  _constants_8h.tex  _constants_8h__dep__incl.md5  _context_8cpp.tex  _context_8cpp__incl.md5  _context_8h.tex  _context_8h__dep__incl.md5  _context_8h__incl.md5  _copyright_8cpp.tex  _copyright_8cpp__incl.md5  _copyright_8h.tex  _copyright_8h__dep__incl.md5  _copyright_8h__incl.md5  _curl_exception_8h.tex  _curl_exception_8h__dep__incl.md5  _curl_exception_8h__incl.md5  _curl_utils_8cpp.tex  _curl_utils_8cpp__incl.md5  _curl_utils_8h.tex  _curl_utils_8h__dep__incl.md5  _curl_utils_8h__incl.md5  _currently_playing_context_8h.tex  _currently_playing_context_8h__dep__incl.md5  _currently_playing_context_8h__incl.md5  _currently_playing_track_8cpp.tex  _currently_playing_track_8cpp__incl.md5  _currently_playing_track_8h.tex  _currently_playing_track_8h__dep__incl.md5  _currently_playing_track_8h__incl.md5  _currently_playingcontext_8cpp.tex  _currently_playingcontext_8cpp__incl.md5  (+256 more)
include/spotifyapi/: SpotifyAPI.cpp
include/spotifyapi/models/: AlbumSimple.cpp
src/: CMakeLists.txt  Constants.h  SpotifyClient.cpp  SpotifyClient.h  Spotifycli.h  spotifycli.cpp
src/MediaPlayer/: MediaPlayer.cpp  MediaPlayer.h
src/Terminal_UI/: AuthenticationView.cpp  PlayerView.cpp  View.h  ViewManager.cpp  ViewManager.h
src/Terminal_UI/PlayerView/: PlayerView.cpp  PlayerView.h
src/api/: SpotifyAPI.cpp  SpotifyAPI.h
src/api/models/: Album.cpp  Album.h  Artist.cpp  Artist.h  Context.cpp  Context.h  Copyright.cpp  Copyright.h  CurrentlyPlayingContext.h  CurrentlyPlayingTrack.cpp  CurrentlyPlayingTrack.h  CurrentlyPlayingcontext.cpp  Cursor.cpp  Cursor.h  CursorPager.cpp  CursorPager.h  Device.cpp  Device.h  Followers.cpp  Followers.h  Pager.cpp  Pager.h  PlayHistory.cpp  PlayHistory.h  Playlist.cpp  Playlist.h  PlaylistTrack.cpp  PlaylistTrack.h  Recommendations.cpp  Recommendations.h  RecommendationsSeed.cpp  RecommendationsSeed.h  SavedAlbum.cpp  SavedAlbum.h  SavedTrack.cpp  SavedTrack.h  Track.cpp  Track.h  TrackLink.cpp  TrackLink.h  (+4 more)
src/api/utils/: CurlException.h  CurlUtils.cpp  curlUtils.h
src/api/utils/curl/: CurlUtils.cpp  CurlUtils.h
src/api/utils/domainSockets/: DomainSocketsUtils.cpp  DomainSocketsUtils.h  sharedConfig.txt
src/api/utils/domainSockets/js/: kill.sh  nohup.out  package-lock.json  package.json  start.sh  webApiInterface.js  webapi.js
src/api/utils/exceptions/: CurlException.h  SocketException.h  SpotifyException.h
src/api/utils/json/: adl_serializer.hpp  json.hpp
src/api/utils/json/detail/: exceptions.hpp  json_pointer.hpp
src/api/utils/json/detail/input/: binary_reader.hpp  input_adapters.hpp  parser.hpp
src/api/utils/json/detail/iterators/: iter_impl.hpp
src/api/utils/json/detail/meta/: is_sax.hpp  type_traits.hpp
src/api/utils/json/detail/output/: binary_writer.hpp  serializer.hpp
src/api/utils/sockets/: ConnectionListener.cpp  ConnectionListener.h  Socket.cpp  Socket.h  SocketUtils.cpp  SocketUtils.h
src/api/vars/: authorizationCode.txt  id.txt  refreshToken.txt  secret.txt
tests/: CMakeLists.txt  SpotifyAPIEndpointTests.cpp  spotifyapitests
tests/Curses Tests/: AuthenticationView.cpp  PlayerView1.cpp  border.c  windowtab.cpp
tests/TestJsons/: a.json
